--- a/licenses.html
+++ b/licenses.html
@@ -321,6 +321,7 @@
 							</ol>
 						</nav>
 
+						<h1 class="base d-none d-md-block mt-3 mb-5">Лицензии и сертификаты</h1>
 						<div class="row text-center">
 							<div class="col-md-6 col-lg-4 col-xl-3 mb-3"><a role="button" href="#" data-toggle="modal" data-target="#licenseModal1"><img class="border p-1" src="img/licenses/license-1.jpg" alt="license-1"></a></div>
 							<div class="col-md-6 col-lg-4 col-xl-3 mb-3"><a role="button" href="#" data-toggle="modal" data-target="#licenseModal2"><img class="border p-1" src="img/licenses/license-1.jpg" alt="license-2"></a></div>
