--- a/news.html
+++ b/news.html
@@ -78,10 +78,10 @@
 								<a class="dropdown-item" href="#">Электромеханические компоненты</a>
 							</div>
 						</li>
-						<li class="nav-item">
+						<li class="nav-item active">
 							<a class="nav-link" href="news.html">Новости</a>
 						</li>
-						<li class="nav-item active">
+						<li class="nav-item">
 							<a class="nav-link" href="licenses.html">Лицензии и сертификаты <span
 									class="sr-only">(current)</span></a>
 						</li>
@@ -321,76 +321,88 @@
 								<li class="breadcrumb-item active" aria-current="page">Новости</li>
 							</ol>
 						</nav>
-
+						<h1 class="base d-none d-md-block mt-3 mb-5">Новости</h1>
 						<div class="row news-block">
 							<div class="col-lg-6">
-								<div class="card mb-3">
-									<img src="img/news/1.jpg" alt="">
-									<div class="card-body">
-										<p class="card-text"><small class="text-dated">24 Апреля 2023</small></p>
-										<h5 class="card-title">Lorem ipsum dolor sit amet consectetur lor</h5>
+								<a href="#">
+									<div class="card mb-3">
+										<img src="img/news/1.jpg" alt="">
+										<div class="card-body">
+											<p class="card-text"><small class="text-dated">24 Апреля 2023</small></p>
+											<h5 class="card-title">Lorem ipsum dolor sit amet consectetur lor</h5>
+										</div>
 									</div>
-								</div>
+								</a>
 							</div>
 							<div class="col-lg-6">
-								<div class="card mb-3">
-									<img src="img/news/2.jpg" alt="">
-									<div class="card-body">
-										<p class="card-text"><small class="text-dated">23 Апреля 2023</small></p>
-										<h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+								<a href="#">
+									<div class="card mb-3">
+										<img src="img/news/2.jpg" alt="">
+										<div class="card-body">
+											<p class="card-text"><small class="text-dated">23 Апреля 2023</small></p>
+											<h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+										</div>
 									</div>
-								</div>
-							</div>
-
-							<div class="col-lg-6">
-								<div class="card mb-3">
-									<img src="img/news/3.jpg" alt="">
-									<div class="card-body">
-										<p class="card-text"><small class="text-dated">22 Апреля 2023</small></p>
-										<h5 class="card-title">Lorem ipsum dolor sit amet consectetur lor, aliquid, porro amet</h5>
-									</div>
-								</div>
-							</div>
-							<div class="col-lg-6">
-								<div class="card mb-3">
-									<img src="img/news/4.jpg" alt="">
-									<div class="card-body">
-										<p class="card-text"><small class="text-dated">21 Апреля 2023</small></p>
-										<h5 class="card-title">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero tempore quos perferendis deserunt veritatis saepe dolore error</h5>
-									</div>
-								</div>
+								</a>
 							</div>
 
 							<div class="col-lg-6">
-								<div class="card mb-3">
-									<img src="img/news/5.jpg" alt="">
-									<div class="card-body">
-										<p class="card-text"><small class="text-dated">20 Апреля 2023</small></p>
-										<h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+								<a href="#">
+									<div class="card mb-3">
+										<img src="img/news/3.jpg" alt="">
+										<div class="card-body">
+											<p class="card-text"><small class="text-dated">22 Апреля 2023</small></p>
+											<h5 class="card-title">Lorem ipsum dolor sit amet consectetur lor, aliquid, porro amet</h5>
+										</div>
 									</div>
-								</div>
+								</a>
 							</div>
 							<div class="col-lg-6">
-								<div class="card mb-3">
-									<img src="img/news/6.jpg" alt="">
-									<div class="card-body">
-										<p class="card-text"><small class="text-dated">19 Апреля 2023</small></p>
-										<h5 class="card-title">Lorem ipsum dolor sit amet consectetur lor, aliquid, porro amet suscipit ex eveniet placeat rem quae</h5>
+								<a href="#">
+									<div class="card mb-3">
+										<img src="img/news/4.jpg" alt="">
+										<div class="card-body">
+											<p class="card-text"><small class="text-dated">21 Апреля 2023</small></p>
+											<h5 class="card-title">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero tempore quos perferendis deserunt veritatis saepe dolore error</h5>
+										</div>
 									</div>
-								</div>
+								</a>
+							</div>
+
+							<div class="col-lg-6">
+								<a href="#">
+									<div class="card mb-3">
+										<img src="img/news/5.jpg" alt=""></a>
+										<div class="card-body">
+											<p class="card-text"><small class="text-dated">20 Апреля 2023</small></p>
+											<h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="col-lg-6">
+								<a href="#">
+									<div class="card mb-3">
+										<img src="img/news/6.jpg" alt="">
+										<div class="card-body">
+											<p class="card-text"><small class="text-dated">19 Апреля 2023</small></p>
+											<a href="#"><h5 class="card-title">Lorem ipsum dolor sit amet consectetur lor, aliquid, porro amet suscipit ex eveniet placeat rem quae</h5>
+										</div>
+									</div>
+								</a>
 							</div>
 
 							<div class="col-12 mt-5">
 								<nav aria-label="Пагинация по страницам">
 									<ul class="pagination justify-content-center">
 										<li class="page-item disabled">
-											<a class="page-link" href="#" tabindex="-1" aria-disabled="true">Предыдущая</a>
+											<a class="page-link" href="#" tabindex="-1" aria-disabled="true">Назад</a>
 										</li>
 										<li class="page-item"><a class="page-link" href="#">1</a></li>
 										<li class="page-item"><a class="page-link" href="#">2</a></li>
 										<li class="page-item"><a class="page-link" href="#">3</a></li>
 										<li class="page-item">
-											<a class="page-link" href="#">Следующая</a>
+											<a class="page-link" href="#">Вперёд</a>
 										</li>
 									</ul>
 								</nav>
