--- a/news.html
+++ b/news.html
@@ -321,7 +321,7 @@
 								<li class="breadcrumb-item active" aria-current="page">Новости</li>
 							</ol>
 						</nav>
-						
+
 						<div class="row news-block">
 							<div class="col-lg-6">
 								<a href="#">
@@ -395,14 +395,18 @@
 							<div class="col-12 mt-5">
 								<nav aria-label="Пагинация по страницам">
 									<ul class="pagination justify-content-center">
-										<li class="page-item disabled">
-											<a class="page-link" href="#" tabindex="-1" aria-disabled="true">Назад</a>
+										<li class="page-item">
+											<a class="page-link" href="#" aria-label="Previous">
+												<span aria-hidden="true">&laquo;</span>
+											</a>
 										</li>
 										<li class="page-item"><a class="page-link" href="#">1</a></li>
 										<li class="page-item"><a class="page-link" href="#">2</a></li>
 										<li class="page-item"><a class="page-link" href="#">3</a></li>
 										<li class="page-item">
-											<a class="page-link" href="#">Вперёд</a>
+											<a class="page-link" href="#" aria-label="Next">
+												<span aria-hidden="true">&raquo;</span>
+											</a>
 										</li>
 									</ul>
 								</nav>
