Разметил Интегральные схемы корпусные

--- a/about.html
+++ b/about.html
@@ -307,7 +307,7 @@
 					<div class="inner-content-right col-lg-9 px-5 pt-4">
 						<nav aria-label="breadcrumb">
 							<ol class="breadcrumb">
-								<li class="breadcrumb-item"><a href="#">Главная</a></li>
+								<li class="breadcrumb-item"><a href="/">Главная</a></li>
 								<li class="breadcrumb-item active" aria-current="page">О компании</li>
 							</ol>
 						</nav>
