--- a/integralnye-skhemy-korpusnye.html
+++ b/integralnye-skhemy-korpusnye.html
@@ -9,7 +9,7 @@
 	<link rel="icon" href="img/svg/logo.svg" type="image/svg+xml">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/custom.css">
-	<title>Epsilon - Изделия</title>
+	<title>Epsilon - Интегральные схемы корпусные</title>
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -69,7 +69,8 @@
 						</li>
 						<li class="nav-item active dropdown">
 							<a class="nav-link dropdown-toggle" href="products.html" id="dropdown07"
-								data-toggle="dropdown-none" aria-haspopup="true" aria-expanded="false">Изделия<span class="sr-only">(current)</span></a>
+								data-toggle="dropdown-none" aria-haspopup="true" aria-expanded="false">Изделия<span
+									class="sr-only">(current)</span></a>
 							<div class="dropdown-menu" aria-labelledby="dropdown07">
 								<a class="dropdown-item" href="#">СВЧ-компоненты</a>
 								<a class="dropdown-item" href="#">Цифровые микросхемы</a>
@@ -101,45 +102,17 @@
 				<nav aria-label="breadcrumb">
 					<ol class="breadcrumb">
 						<li class="breadcrumb-item"><a href="/">Главная</a></li>
-						<li class="breadcrumb-item active" aria-current="page">Изделия</li>
+						<li class="breadcrumb-item"><a href="products.html">Изделия</a></li>
+						<li class="breadcrumb-item"><a href="#">СВЧ компоненты</a></li>
+						<li class="breadcrumb-item"><a href="#">METDA</a></li>
+						<li class="breadcrumb-item active" aria-current="page">Интегральные схемы корпусные</li>
 					</ol>
 				</nav>
-				<div class="row text-center text-lg-left">
+				<div class="row">
 					<div class="col-12">
-						<h1 class="base text-left mt-3 mb-5">Изделия</h1>
+						<h1 class="base text-left mt-3 mb-5">Интегральные схемы корпусные</h1>
 					</div>
-					<div class="col-md-6 col-lg-4 col-xl-3 mb-3">
-						<a role="button" href="#"><img src="img/products/SVCh_komponenty.png" alt=""></a>
-						<h3 class="h-common">СВЧ-компоненты</h3>
-					</div>
-					<div class="col-md-6 col-lg-4 col-xl-3 mb-3">
-						<a role="button" href="#"><img src="img/products/Tsifrovye_mikroskhemy.png" alt=""></a>
-						<h3 class="h-common">Цифровые микросхемы</h3>
-					</div>
-					<div class="col-md-6 col-lg-4 col-xl-3 mb-3">
-						<a role="button" href="#"><img src="img/products/Analogovye_mikroskhemy.png" alt=""></a>
-						<h3 class="h-common">Аналоговые микросхемы</h3>
-					</div>
-					<div class="col-md-6 col-lg-4 col-xl-3 mb-3">
-						<a role="button" href="#"><img src="img/products/Passivnye_komponenty.png" alt=""></a>
-						<h3 class="h-common">Пассивные компоненты</h3>
-					</div>
-					<div class="col-md-6 col-lg-4 col-xl-3 mb-3">
-						<a role="button" href="#"><img src="img/products/Elektromekhanicheskie_komponenty.png" alt=""></a>
-						<h3 class="h-common">Электромеханические<br>компоненты</h3>
-					</div>
-					<div class="col-md-6 col-lg-4 col-xl-3 mb-3">
-						<a role="button" href="#"><img src="img/products/Kvartsevye_generatory_i_rezonatory.png" alt=""></a>
-						<h3 class="h-common">Кварцевые генераторы<br>и резонаторы</h3>
-					</div>
-					<div class="col-md-6 col-lg-4 col-xl-3 mb-3">
-						<a role="button" href="#"><img src="img/products/Optoelektronnye_komponenty.png" alt=""></a>
-						<h3 class="h-common">Оптоэлектронные<br>компоненты</h3>
-					</div>
-					<div class="col-md-6 col-lg-4 col-xl-3 mb-3">
-						<a role="button" href="#"><img src="img/products/Vtorichnye_istochniki_pitaniya.png" alt=""></a>
-						<h3 class="h-common">Вторичные<br>источники питания</h3>
-					</div>
+					
 				</div>
 			</div>
 		</main>
