--- a/news.html
+++ b/news.html
@@ -317,7 +317,7 @@
 					<div class="inner-content-right col-lg-9 px-5 pt-4">
 						<nav aria-label="breadcrumb">
 							<ol class="breadcrumb">
-								<li class="breadcrumb-item"><a href="#">Главная</a></li>
+								<li class="breadcrumb-item"><a href="/">Главная</a></li>
 								<li class="breadcrumb-item active" aria-current="page">Новости</li>
 							</ol>
 						</nav>
