закончил стр интегральные схемы

--- a/integralnye-skhemy-korpusnye.html
+++ b/integralnye-skhemy-korpusnye.html
@@ -112,7 +112,80 @@
 					<div class="col-12">
 						<h1 class="base text-left mt-3 mb-5">Интегральные схемы корпусные</h1>
 					</div>
-					
+					<div class="col-4 d-flex mb-5">
+						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
+						<div class="col">
+							<h3 class="h-common text-left">Малошумящие усилители</h3>
+							<ul class="red-round">
+								<li><a href="#">Транзисторы корпусированные</a></li>
+								<li><a href="#">Транзисторы корпусированные</a></li>
+								<li><a href="#">Интегральные схемы корпусированные</a></li>
+								<li><a href="#">Интегральные схемы корпусированные</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-4 d-flex mb-5">
+						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
+						<div class="col">
+							<h3 class="h-common text-left">Малошумящие усилители</h3>
+							<ul class="red-round">
+								<li><a href="#">Транзисторы корпусированные</a></li>
+								<li><a href="#">Транзисторы корпусированные</a></li>
+								<li><a href="#">Интегральные схемы корпусированные</a></li>
+								<li><a href="#">Интегральные схемы корпусированные</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-4 d-flex mb-5">
+						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
+						<div class="col">
+							<h3 class="h-common text-left">Малошумящие усилители</h3>
+							<ul class="red-round">
+								<li><a href="#">Транзисторы корпусированные</a></li>
+								<li><a href="#">Транзисторы корпусированные</a></li>
+								<li><a href="#">Интегральные схемы корпусированные</a></li>
+								<li><a href="#">Интегральные схемы корпусированные</a></li>
+							</ul>
+						</div>
+					</div>
+
+					<div class="col-4 d-flex mb-5">
+						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
+						<div class="col">
+							<h3 class="h-common text-left">Малошумящие усилители</h3>
+							<ul class="red-round">
+								<li><a href="#">Транзисторы корпусированные</a></li>
+								<li><a href="#">Транзисторы корпусированные</a></li>
+								<li><a href="#">Интегральные схемы корпусированные</a></li>
+								<li><a href="#">Интегральные схемы корпусированные</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-4 d-flex mb-5">
+						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
+						<div class="col">
+							<h3 class="h-common text-left">Малошумящие усилители</h3>
+							<ul class="red-round">
+								<li><a href="#">Транзисторы корпусированные</a></li>
+								<li><a href="#">Транзисторы корпусированные</a></li>
+								<li><a href="#">Интегральные схемы корпусированные</a></li>
+								<li><a href="#">Интегральные схемы корпусированные</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-4 d-flex mb-5">
+						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
+						<div class="col">
+							<h3 class="h-common text-left">Малошумящие усилители</h3>
+							<ul class="red-round">
+								<li><a href="#">Транзисторы корпусированные</a></li>
+								<li><a href="#">Транзисторы корпусированные</a></li>
+								<li><a href="#">Интегральные схемы корпусированные</a></li>
+								<li><a href="#">Интегральные схемы корпусированные</a></li>
+							</ul>
+						</div>
+					</div>
+
 				</div>
 			</div>
 		</main>
