--- a/integralnye-skhemy-korpusnye.html
+++ b/integralnye-skhemy-korpusnye.html
@@ -112,7 +112,7 @@
 					<div class="col-12">
 						<h1 class="base text-left mt-3 mb-5">Интегральные схемы корпусные</h1>
 					</div>
-					<div class="col-4 d-flex mb-5">
+					<div class="col-md-6 col-xl-4 d-flex mb-5">
 						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
 						<div class="col">
 							<h3 class="h-common text-left">Малошумящие усилители</h3>
@@ -124,7 +124,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="col-4 d-flex mb-5">
+					<div class="col-md-6 col-xl-4 d-flex mb-5">
 						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
 						<div class="col">
 							<h3 class="h-common text-left">Малошумящие усилители</h3>
@@ -136,7 +136,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="col-4 d-flex mb-5">
+					<div class="col-md-6 col-xl-4 d-flex mb-5">
 						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
 						<div class="col">
 							<h3 class="h-common text-left">Малошумящие усилители</h3>
@@ -149,7 +149,7 @@
 						</div>
 					</div>
 
-					<div class="col-4 d-flex mb-5">
+					<div class="col-md-6 col-xl-4 d-flex mb-5">
 						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
 						<div class="col">
 							<h3 class="h-common text-left">Малошумящие усилители</h3>
@@ -161,7 +161,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="col-4 d-flex mb-5">
+					<div class="col-md-6 col-xl-4 d-flex mb-5">
 						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
 						<div class="col">
 							<h3 class="h-common text-left">Малошумящие усилители</h3>
@@ -173,7 +173,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="col-4 d-flex mb-5">
+					<div class="col-md-6 col-xl-4 d-flex mb-5">
 						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
 						<div class="col">
 							<h3 class="h-common text-left">Малошумящие усилители</h3>
