--- a/metda.html
+++ b/metda.html
@@ -112,7 +112,7 @@
 					<div class="col-12">
 						<h1 class="base text-left mt-3 mb-5">METDA</h1>
 					</div>
-					<div class="col-4 d-flex mb-5">
+					<div class="col-md-6 col-xl-4 d-flex mb-5">
 						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
 						<div class="col">
 							<h3 class="h-common text-left">Интегральные схемы бескорпусные</h3>
@@ -130,7 +130,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="col-4 d-flex mb-5">
+					<div class="col-md-6 col-xl-4 d-flex mb-5">
 						<div class="col-2">&nbsp;</div>
 						<div class="col">
 							<h3 class="h-common text-left">&nbsp;</h3>
@@ -148,7 +148,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="col-4 d-flex mb-5">
+					<div class="col-md-6 col-xl-4 d-flex mb-5">
 						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
 						<div class="col">
 							<h3 class="h-common text-left">Транзисторы корпусированные</h3>
@@ -158,10 +158,10 @@
 								<li><a href="#">Интегральные схемы корпусированные</a></li>
 								<li><a href="#">Трехмерные сборки</a></li>
 							</ul>
+						</div>
 					</div>
-				</div>
-				<div class="row">
-					<div class="col-4 d-flex mb-5">
+				
+					<div class="col-md-6 col-xl-4 d-flex mb-5">
 						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
 						<div class="col">
 							<h3 class="h-common text-left">Усилители мощности модульные</h3>
@@ -173,7 +173,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="col-4 d-flex mb-5">
+					<div class="col-md-6 col-xl-4 d-flex mb-5">
 						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
 						<div class="col">
 							<h3 class="h-common text-left">Интегральные схемы корпусированные</h3>
@@ -185,7 +185,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="col-4 d-flex mb-5">
+					<div class="col-md-6 col-xl-4 d-flex mb-5">
 						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
 						<div class="col">
 							<h3 class="h-common text-left">Трехмерные сборки</h3>
