закончил стр с таблицами

--- a/integralnye-skhemy-korpusnye.html
+++ b/integralnye-skhemy-korpusnye.html
@@ -104,7 +104,7 @@
 						<li class="breadcrumb-item"><a href="/">Главная</a></li>
 						<li class="breadcrumb-item"><a href="products.html">Изделия</a></li>
 						<li class="breadcrumb-item"><a href="#">СВЧ компоненты</a></li>
-						<li class="breadcrumb-item"><a href="#">METDA</a></li>
+						<li class="breadcrumb-item"><a href="metda.html">METDA</a></li>
 						<li class="breadcrumb-item active" aria-current="page">Интегральные схемы корпусные</li>
 					</ol>
 				</nav>
