--- a/maloshumiashchie-usiliteli.html
+++ b/maloshumiashchie-usiliteli.html
@@ -104,45 +104,347 @@
 						<li class="breadcrumb-item"><a href="/">Главная</a></li>
 						<li class="breadcrumb-item"><a href="products.html">Изделия</a></li>
 						<li class="breadcrumb-item"><a href="#">СВЧ компоненты</a></li>
-						<li class="breadcrumb-item"><a href="#">METDA</a></li>
-						<li class="breadcrumb-item"><a href="#">Интегральные схемы корпусные</a></li>
+						<li class="breadcrumb-item"><a href="metda.html">METDA</a></li>
+						<li class="breadcrumb-item"><a href="integralnye-skhemy-korpusnye.html">Интегральные схемы корпусные</a></li>
 						<li class="breadcrumb-item active" aria-current="page">Малошумящие уселители</li>
 					</ol>
 				</nav>
 				<div class="row">
 					<div class="col-12">
 						<h1 class="base text-left mt-3 mb-5">Малошумящие уселители</h1>
+						<div class="table-responsive">
+							<table class="table table-striped table-bordered">
+								<thead class="thead-dark">
+									<tr>
+										<th scope="col">Наименование</th>
+										<th scope="col">FРАБ, ГГц</th>
+										<th scope="col">P1dB, дБм</th>
+										<th scope="col">КУ, дБ</th>
+										<th scope="col">ΔKУ, дБ</th>
+										<th scope="col">КШ, дБ</th>
+										<th scope="col">КСВНВХ</th>
+										<th scope="col">КСВНВЫХ</th>
+										<th scope="col">VПИТ, В</th>
+										<th scope="col">IПОТР, мА</th>
+										<th scope="col">&nbsp;</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<th scope="row">NC10375C-0018</th>
+										<td>0,2-18</td>
+										<td>18</td>
+										<td>15</td>
+										<td>±1</td>
+										<td>1.8</td>
+										<td>1.5</td>
+										<td>1.5</td>
+										<td>5</td>
+										<td>50</td>
+										<td><a href="#"><img src="img/svg/pdf_icon.svg" alt="pdf-icon"></a></td>
+									</tr>
+									<tr>
+										<th scope="row">NC10376C-0020</th>
+										<td>0,2-20</td>
+										<td>13</td>
+										<td>23</td>
+										<td>±2</td>
+										<td>1.7</td>
+										<td>1.5</td>
+										<td>1.5</td>
+										<td>5</td>
+										<td>63</td>
+										<td><a href="#"><img src="img/svg/pdf_icon.svg" alt="pdf-icon"></a></td>
+									<tr>
+										<th scope="row">NC10308C-0527</th>
+										<td>0,5-2,7</td>
+										<td>10</td>
+										<td>23</td>
+										<td>±1,5</td>
+										<td>1</td>
+										<td>1.8</td>
+										<td>1.8</td>
+										<td>5</td>
+										<td>60</td>
+										<td><a href="#"><img src="img/svg/pdf_icon.svg" alt="pdf-icon"></a></td>
+									</tr>
+									<tr>
+										<th scope="row">NC10200C-103</th>
+										<td>0,7-3,0</td>
+										<td>18</td>
+										<td>29</td>
+										<td>±0,75</td>
+										<td>1.6</td>
+										<td>1.6</td>
+										<td>1.4</td>
+										<td>5</td>
+										<td>65</td>
+										<td><a href="#"><img src="img/svg/pdf_icon.svg" alt="pdf-icon"></a></td>
+									</tr>
+
+									<tr>
+										<th scope="row">NC10375C-0018</th>
+										<td>0,2-18</td>
+										<td>18</td>
+										<td>15</td>
+										<td>±1</td>
+										<td>1.8</td>
+										<td>1.5</td>
+										<td>1.5</td>
+										<td>5</td>
+										<td>50</td>
+										<td><a href="#"><img src="img/svg/pdf_icon.svg" alt="pdf-icon"></a></td>
+									</tr>
+									<tr>
+										<th scope="row">NC10376C-0020</th>
+										<td>0,2-20</td>
+										<td>13</td>
+										<td>23</td>
+										<td>±2</td>
+										<td>1.7</td>
+										<td>1.5</td>
+										<td>1.5</td>
+										<td>5</td>
+										<td>63</td>
+										<td><a href="#"><img src="img/svg/pdf_icon.svg" alt="pdf-icon"></a></td>
+									<tr>
+										<th scope="row">NC10308C-0527</th>
+										<td>0,5-2,7</td>
+										<td>10</td>
+										<td>23</td>
+										<td>±1,5</td>
+										<td>1</td>
+										<td>1.8</td>
+										<td>1.8</td>
+										<td>5</td>
+										<td>60</td>
+										<td><a href="#"><img src="img/svg/pdf_icon.svg" alt="pdf-icon"></a></td>
+									</tr>
+									<tr>
+										<th scope="row">NC10200C-103</th>
+										<td>0,7-3,0</td>
+										<td>18</td>
+										<td>29</td>
+										<td>±0,75</td>
+										<td>1.6</td>
+										<td>1.6</td>
+										<td>1.4</td>
+										<td>5</td>
+										<td>65</td>
+										<td><a href="#"><img src="img/svg/pdf_icon.svg" alt="pdf-icon"></a></td>
+									</tr>
+
+									<tr>
+										<th scope="row">NC10375C-0018</th>
+										<td>0,2-18</td>
+										<td>18</td>
+										<td>15</td>
+										<td>±1</td>
+										<td>1.8</td>
+										<td>1.5</td>
+										<td>1.5</td>
+										<td>5</td>
+										<td>50</td>
+										<td><a href="#"><img src="img/svg/pdf_icon.svg" alt="pdf-icon"></a></td>
+									</tr>
+									<tr>
+										<th scope="row">NC10376C-0020</th>
+										<td>0,2-20</td>
+										<td>13</td>
+										<td>23</td>
+										<td>±2</td>
+										<td>1.7</td>
+										<td>1.5</td>
+										<td>1.5</td>
+										<td>5</td>
+										<td>63</td>
+										<td><a href="#"><img src="img/svg/pdf_icon.svg" alt="pdf-icon"></a></td>
+									<tr>
+										<th scope="row">NC10308C-0527</th>
+										<td>0,5-2,7</td>
+										<td>10</td>
+										<td>23</td>
+										<td>±1,5</td>
+										<td>1</td>
+										<td>1.8</td>
+										<td>1.8</td>
+										<td>5</td>
+										<td>60</td>
+										<td><a href="#"><img src="img/svg/pdf_icon.svg" alt="pdf-icon"></a></td>
+									</tr>
+									<tr>
+										<th scope="row">NC10200C-103</th>
+										<td>0,7-3,0</td>
+										<td>18</td>
+										<td>29</td>
+										<td>±0,75</td>
+										<td>1.6</td>
+										<td>1.6</td>
+										<td>1.4</td>
+										<td>5</td>
+										<td>65</td>
+										<td><a href="#"><img src="img/svg/pdf_icon.svg" alt="pdf-icon"></a></td>
+									</tr>
+
+									<tr>
+										<th scope="row">NC10375C-0018</th>
+										<td>0,2-18</td>
+										<td>18</td>
+										<td>15</td>
+										<td>±1</td>
+										<td>1.8</td>
+										<td>1.5</td>
+										<td>1.5</td>
+										<td>5</td>
+										<td>50</td>
+										<td><a href="#"><img src="img/svg/pdf_icon.svg" alt="pdf-icon"></a></td>
+									</tr>
+									<tr>
+										<th scope="row">NC10376C-0020</th>
+										<td>0,2-20</td>
+										<td>13</td>
+										<td>23</td>
+										<td>±2</td>
+										<td>1.7</td>
+										<td>1.5</td>
+										<td>1.5</td>
+										<td>5</td>
+										<td>63</td>
+										<td><a href="#"><img src="img/svg/pdf_icon.svg" alt="pdf-icon"></a></td>
+									<tr>
+										<th scope="row">NC10308C-0527</th>
+										<td>0,5-2,7</td>
+										<td>10</td>
+										<td>23</td>
+										<td>±1,5</td>
+										<td>1</td>
+										<td>1.8</td>
+										<td>1.8</td>
+										<td>5</td>
+										<td>60</td>
+										<td><a href="#"><img src="img/svg/pdf_icon.svg" alt="pdf-icon"></a></td>
+									</tr>
+									<tr>
+										<th scope="row">NC10200C-103</th>
+										<td>0,7-3,0</td>
+										<td>18</td>
+										<td>29</td>
+										<td>±0,75</td>
+										<td>1.6</td>
+										<td>1.6</td>
+										<td>1.4</td>
+										<td>5</td>
+										<td>65</td>
+										<td><a href="#"><img src="img/svg/pdf_icon.svg" alt="pdf-icon"></a></td>
+									</tr>
+
+									<tr>
+										<th scope="row">NC10375C-0018</th>
+										<td>0,2-18</td>
+										<td>18</td>
+										<td>15</td>
+										<td>±1</td>
+										<td>1.8</td>
+										<td>1.5</td>
+										<td>1.5</td>
+										<td>5</td>
+										<td>50</td>
+										<td><a href="#"><img src="img/svg/pdf_icon.svg" alt="pdf-icon"></a></td>
+									</tr>
+									<tr>
+										<th scope="row">NC10376C-0020</th>
+										<td>0,2-20</td>
+										<td>13</td>
+										<td>23</td>
+										<td>±2</td>
+										<td>1.7</td>
+										<td>1.5</td>
+										<td>1.5</td>
+										<td>5</td>
+										<td>63</td>
+										<td><a href="#"><img src="img/svg/pdf_icon.svg" alt="pdf-icon"></a></td>
+									<tr>
+										<th scope="row">NC10308C-0527</th>
+										<td>0,5-2,7</td>
+										<td>10</td>
+										<td>23</td>
+										<td>±1,5</td>
+										<td>1</td>
+										<td>1.8</td>
+										<td>1.8</td>
+										<td>5</td>
+										<td>60</td>
+										<td><a href="#"><img src="img/svg/pdf_icon.svg" alt="pdf-icon"></a></td>
+									</tr>
+									<tr>
+										<th scope="row">NC10200C-103</th>
+										<td>0,7-3,0</td>
+										<td>18</td>
+										<td>29</td>
+										<td>±0,75</td>
+										<td>1.6</td>
+										<td>1.6</td>
+										<td>1.4</td>
+										<td>5</td>
+										<td>65</td>
+										<td><a href="#"><img src="img/svg/pdf_icon.svg" alt="pdf-icon"></a></td>
+									</tr>
+
+									<tr>
+										<th scope="row">NC10375C-0018</th>
+										<td>0,2-18</td>
+										<td>18</td>
+										<td>15</td>
+										<td>±1</td>
+										<td>1.8</td>
+										<td>1.5</td>
+										<td>1.5</td>
+										<td>5</td>
+										<td>50</td>
+										<td><a href="#"><img src="img/svg/pdf_icon.svg" alt="pdf-icon"></a></td>
+									</tr>
+									<tr>
+										<th scope="row">NC10376C-0020</th>
+										<td>0,2-20</td>
+										<td>13</td>
+										<td>23</td>
+										<td>±2</td>
+										<td>1.7</td>
+										<td>1.5</td>
+										<td>1.5</td>
+										<td>5</td>
+										<td>63</td>
+										<td><a href="#"><img src="img/svg/pdf_icon.svg" alt="pdf-icon"></a></td>
+									<tr>
+										<th scope="row">NC10308C-0527</th>
+										<td>0,5-2,7</td>
+										<td>10</td>
+										<td>23</td>
+										<td>±1,5</td>
+										<td>1</td>
+										<td>1.8</td>
+										<td>1.8</td>
+										<td>5</td>
+										<td>60</td>
+										<td><a href="#"><img src="img/svg/pdf_icon.svg" alt="pdf-icon"></a></td>
+									</tr>
+									<tr>
+										<th scope="row">NC10200C-103</th>
+										<td>0,7-3,0</td>
+										<td>18</td>
+										<td>29</td>
+										<td>±0,75</td>
+										<td>1.6</td>
+										<td>1.6</td>
+										<td>1.4</td>
+										<td>5</td>
+										<td>65</td>
+										<td><a href="#"><img src="img/svg/pdf_icon.svg" alt="pdf-icon"></a></td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
 					</div>
-					<table class="table">
-						<thead>
-							<tr>
-								<th scope="col">#</th>
-								<th scope="col">First</th>
-								<th scope="col">Last</th>
-								<th scope="col">Handle</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<th scope="row">1</th>
-								<td>Mark</td>
-								<td>Otto</td>
-								<td>@mdo</td>
-							</tr>
-							<tr>
-								<th scope="row">2</th>
-								<td>Jacob</td>
-								<td>Thornton</td>
-								<td>@fat</td>
-							</tr>
-							<tr>
-								<th scope="row">3</th>
-								<td>Larry</td>
-								<td>the Bird</td>
-								<td>@twitter</td>
-							</tr>
-						</tbody>
-					</table>
 				</div>
 			</div>
 		</main>
