--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="row no-gutters align-items-center">
 					<div class="col-xl-5 mb-3 mb-xl-0">
 						<div class="d-sm-flex no-gutters align-items-center text-center text-sm-left">
-							<div class="mb-3 mb-sm-0"><a href="Epsilon"><img class="logo" src="img/svg/logo.svg" alt="Эпсилон логотип"></a></div>
+							<div class="mb-3 mb-sm-0"><a href="/"><img class="logo" src="img/svg/logo.svg" alt="Эпсилон логотип"></a></div>
 							<p class="pl-sm-3 slogan">Официальный поставщик в РФ<br>высоконадежной ЭКБ производства КНР</p>
 						</div>
 					</div>
@@ -54,7 +54,7 @@
 				<div class="collapse navbar-collapse" id="navbarsExample07">
 					<ul class="navbar-nav mr-auto">
 						<li class="nav-item active">
-							<a class="nav-link" href="Epsilon">Главная <span class="sr-only">(current)</span></a>
+							<a class="nav-link" href="/">Главная <span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="about.html">О компании</a>
