--- a/integralnye-skhemy-korpusnye.html
+++ b/integralnye-skhemy-korpusnye.html
@@ -21,7 +21,7 @@
 				<div class="row no-gutters align-items-center">
 					<div class="col-xl-5 mb-3 mb-xl-0">
 						<div class="d-sm-flex no-gutters align-items-center text-center text-sm-left">
-							<div class="mb-3 mb-sm-0"><a href="/"><img class="logo" src="img/svg/logo.svg"
+							<div class="mb-3 mb-sm-0"><a href="Epsilon"><img class="logo" src="img/svg/logo.svg"
 										alt="Эпсилон логотип"></a></div>
 							<p class="pl-sm-3 slogan">Официальный поставщик в РФ<br>высоконадежной ЭКБ производства КНР</p>
 						</div>
@@ -101,7 +101,7 @@
 			<div class="container">
 				<nav aria-label="breadcrumb">
 					<ol class="breadcrumb">
-						<li class="breadcrumb-item"><a href="/">Главная</a></li>
+						<li class="breadcrumb-item"><a href="Epsilon">Главная</a></li>
 						<li class="breadcrumb-item"><a href="products.html">Изделия</a></li>
 						<li class="breadcrumb-item"><a href="#">СВЧ компоненты</a></li>
 						<li class="breadcrumb-item"><a href="metda.html">METDA</a></li>
