делаю выпадающие элементы списка в разделе

--- a/maloshumiashchie-usiliteli.html
+++ b/maloshumiashchie-usiliteli.html
@@ -72,7 +72,7 @@
 								data-toggle="dropdown-none" aria-haspopup="true" aria-expanded="false">Изделия<span
 									class="sr-only">(current)</span></a>
 							<div class="dropdown-menu" aria-labelledby="dropdown07">
-								<a class="dropdown-item" href="#">СВЧ-компоненты</a>
+								<a class="dropdown-item" href="svch-komponenty.html">СВЧ-компоненты</a>
 								<a class="dropdown-item" href="#">Цифровые микросхемы</a>
 								<a class="dropdown-item" href="#">Аналоговые микросхемы</a>
 								<a class="dropdown-item" href="#">Пассивные компоненты</a>
@@ -103,9 +103,9 @@
 					<ol class="breadcrumb">
 						<li class="breadcrumb-item"><a href="Epsilon">Главная</a></li>
 						<li class="breadcrumb-item"><a href="products.html">Изделия</a></li>
-						<li class="breadcrumb-item"><a href="#">СВЧ компоненты</a></li>
-						<li class="breadcrumb-item"><a href="metda.html">METDA</a></li>
-						<li class="breadcrumb-item"><a href="integralnye-skhemy-korpusnye.html">Интегральные схемы корпусные</a></li>
+						<li class="breadcrumb-item"><a href="svch-komponenty.html">СВЧ компоненты</a></li>
+						<li class="breadcrumb-item">METDA</li>
+						<li class="breadcrumb-item">Интегральные схемы корпусные</li>
 						<li class="breadcrumb-item active" aria-current="page">Малошумящие уселители</li>
 					</ol>
 				</nav>
