--- a/products.html
+++ b/products.html
@@ -71,7 +71,7 @@
 							<a class="nav-link dropdown-toggle" href="products.html" id="dropdown07"
 								data-toggle="dropdown-none" aria-haspopup="true" aria-expanded="false">Изделия<span class="sr-only">(current)</span></a>
 							<div class="dropdown-menu" aria-labelledby="dropdown07">
-								<a class="dropdown-item" href="#">СВЧ-компоненты</a>
+								<a class="dropdown-item" href="svch-komponenty.html">СВЧ-компоненты</a>
 								<a class="dropdown-item" href="#">Цифровые микросхемы</a>
 								<a class="dropdown-item" href="#">Аналоговые микросхемы</a>
 								<a class="dropdown-item" href="#">Пассивные компоненты</a>
@@ -109,7 +109,7 @@
 						<h1 class="base text-left mt-3 mb-5">Изделия</h1>
 					</div>
 					<div class="col-md-6 col-lg-4 col-xl-3 mb-3">
-						<a role="button" href="#"><img src="img/products/SVCh_komponenty.png" alt=""></a>
+						<a role="button" href="svch-komponenty.html"><img src="img/products/SVCh_komponenty.png" alt=""></a>
 						<h3 class="h-common">СВЧ-компоненты</h3>
 					</div>
 					<div class="col-md-6 col-lg-4 col-xl-3 mb-3">
