--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							<a class="nav-link dropdown-toggle" href="products.html" id="dropdown07" data-toggle="dropdown-none" aria-haspopup="true"
 								aria-expanded="false">Изделия</a>
 							<div class="dropdown-menu" aria-labelledby="dropdown07">
-								<a class="dropdown-item" href="#">СВЧ-компоненты</a>
+								<a class="dropdown-item" href="svch-komponenty.html">СВЧ-компоненты</a>
 								<a class="dropdown-item" href="#">Цифровые микросхемы</a>
 								<a class="dropdown-item" href="#">Аналоговые микросхемы</a>
 								<a class="dropdown-item" href="#">Пассивные компоненты</a>
@@ -95,7 +95,7 @@
 						<div class="product-menu">
 							<div class="dropright">
 								<div class="dropright-item parent active" role="button" data-toggle="dropdown-none" aria-haspopup="true" aria-expanded="false">
-									<a href="#">СВЧ-компоненты</a>
+									<a href="svch-komponenty.html">СВЧ-компоненты</a>
 									<div class="dropdown-menu">
 										<div class="row m-3">
 											<div class="col-4">
