--- a/svch-komponenty.html
+++ b/svch-komponenty.html
@@ -9,7 +9,7 @@
 	<link rel="icon" href="img/svg/logo.svg" type="image/svg+xml">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/custom.css">
-	<title>Epsilon - Интегральные схемы корпусные</title>
+	<title>Epsilon - СВЧ-компоненты</title>
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -101,50 +101,174 @@
 			<div class="container">
 				<nav aria-label="breadcrumb">
 					<ol class="breadcrumb">
-						<li class="breadcrumb-item"><a href="Epsilon">Главная</a></li>
+						<li class="breadcrumb-item"><a href="/">Главная</a></li>
 						<li class="breadcrumb-item"><a href="products.html">Изделия</a></li>
-						<li class="breadcrumb-item"><a href="#">СВЧ компоненты</a></li>
-						<li class="breadcrumb-item"><a href="metda.html">METDA</a></li>
-						<li class="breadcrumb-item active" aria-current="page">Интегральные схемы корпусные</li>
+						<li class="breadcrumb-item active" aria-current="page">СВЧ компоненты</li>
 					</ol>
 				</nav>
+
 				<div class="row">
 					<div class="col-12">
-						<h1 class="base text-left mt-3 mb-5">Интегральные схемы корпусные</h1>
+						<h1 class="base text-left mt-3 mb-5">METDA</h1>
 					</div>
 					<div class="col-md-6 col-xl-4 d-flex mb-5">
 						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
 						<div class="col">
-							<h3 class="h-common text-left">Малошумящие усилители</h3>
+							<h3 class="h-common text-left">Интегральные схемы бескорпусные</h3>
 							<ul class="red-round">
-								<li><a href="#">Транзисторы корпусированные</a></li>
-								<li><a href="#">Транзисторы корпусированные</a></li>
-								<li><a href="#">Интегральные схемы корпусированные</a></li>
-								<li><a href="#">Интегральные схемы корпусированные</a></li>
+								<li><a href="maloshumiashchie-usiliteli.html">Малошумящие усилители</a></li>
+								<li><a class="link-collapse" data-toggle="collapse" href="#collapseSVCH-1" role="button" aria-expanded="false"
+									aria-controls="collapseSVCH-1">Усилители мощности</a></li>
+									<div class="collapse" id="collapseSVCH-1">
+										<ul>
+											<li><a href="#">Предварительные усилители (Gain Block)</a></li>
+											<li><a href="#">Усилители мощности на основе GaAs</a></li>
+											<li><a href="#">Усилители мощности на основе GaN</a></li>
+											<li><a href="#">Усилители мощности широкополосные</a></li>
+											<li><a href="#">Усилители мощности с высокой линейностью</a></li>
+											<li><a href="#">Усилители мощности с встроенным переключателем</a></li>
+											<li><a href="#">Усилители мощности двухрежимные</a></li>
+											<li><a href="#">Усилители мощности с высоким напряжением питания</a></li>
+										</ul>
+									</div>
+								<li><a class="link-collapse" data-toggle="collapse" href="#collapseSVCH-2" role="button" aria-expanded="false"
+									aria-controls="collapseSVCH-2">Фазовращатели с цифровым управлением</a></li>
+									<div class="collapse" id="collapseSVCH-2">
+										<ul>
+											<li><a href="#">Фазовращатели на основе GaAs с цифровым управлением</a></li>
+											<li><a href="#">Фазовращатели на основе GaN с цифровым управлением</a></li>
+										</ul>
+									</div>
+								<li><a href="#">Линии задержки с цифровым управлением</a></li>
+								<li><a class="link-collapse" data-toggle="collapse" href="#collapseSVCH-3" role="button" aria-expanded="false"
+									aria-controls="collapseSVCH-3">Аттенюаторы</a></li>
+									<div class="collapse" id="collapseSVCH-3">
+										<ul>
+											<li><a href="#">Аттенюаторы на основе GaAs с цифровым управлением</a></li>
+											<li><a href="#">Аттенюаторы на основе GaN с цифровым управлением</a></li>
+											<li><a href="#">Аттенюаторы с аналоговым управлением</a></li>
+											<li><a href="#">Аттенюаторы с фиксированным коэффициентом ослабления</a></li>
+										</ul>
+									</div>
+								<li><a href="#">Генераторы, управляемые напряжением</a></li>
+								<li><a class="link-collapse" data-toggle="collapse" href="#collapseSVCH-4" role="button" aria-expanded="false"
+									aria-controls="collapseSVCH-4">Многофункциональные интегральные схемы</a></li>
+									<div class="collapse" id="collapseSVCH-4">
+										<ul>
+											<li><a href="#">Интегральные схемы для цифрового управления фазовым сдвигом и коэффициентом ослабления</a></li>
+											<li><a href="#">Приемопередатчики</a></li>
+											<li><a href="#">Приемопередатчики с цифровым управлением фазовым сдвигом и коэффициентом ослабления</a></li>
+											<li><a href="#">Преобразователи частоты двунаправленные</a></li>
+										</ul>
+									</div>
+								<li><a class="link-collapse" data-toggle="collapse" href="#collapseSVCH-5" role="button" aria-expanded="false"
+									aria-controls="collapseSVCH-5">Переключатели</a></li>
+									<div class="collapse" id="collapseSVCH-5">
+										<ul>
+											<li><a href="#">Переключатели на основе GaAs FET</a></li>
+											<li><a href="#">Переключатели на основе GaAs FET с драйверами и дешифраторами</a></li>
+											<li><a href="#">Переключатели на основе GaAs PIN</a></li>
+											<li><a href="#">Переключатели на основе GaN FET</a></li>
+										</ul>
+									</div>
+								<a class="link-collapse" data-toggle="collapse" href="#collapseSVCH" role="button" aria-expanded="false" aria-controls="collapseSVCH">
+									Показать больше изделий
+								</a>
+								<div class="collapse" id="collapseSVCH">
+									<li><a class="link-collapse" data-toggle="collapse" href="#collapseSVCH-6" role="button" aria-expanded="false"
+										aria-controls="collapseSVCH-6">Смесители, преобразователи частоты и модуляторы</a></li>
+										<div class="collapse" id="collapseSVCH-6">
+											<ul>
+												<li><a href="#">Двойные балансные смесители пассивные</a></li>
+												<li><a href="#">Двойные балансные смесители с встроенным усилителем сигнала гетеродина (LO)</a></li>
+												<li><a href="#">Квадратурные (I/Q) смесители</a></li>
+												<li><a href="#">Гармонические смесители</a></li>
+												<li><a href="#">Преобразователи частоты понижающие</a></li>
+												<li><a href="#">Преобразователи частоты повышающие</a></li>
+												<li><a href="#">Модуляторы QPSK</a></li>
+											</ul>
+										</div>
+									<li><a class="link-collapse" data-toggle="collapse" href="#collapseSVCH-7" role="button" aria-expanded="false"
+										aria-controls="collapseSVCH-7">Делители и умножители частоты</a></li>
+										<div class="collapse" id="collapseSVCH-7">
+											<ul>
+												<li><a href="#">Умножители частоты активные</a></li>
+												<li><a href="#">Умножители частоты пассивные</a></li>
+												<li><a href="#">Делители частоты</a></li>
+											</ul>
+										</div>
+									<li><a href="#">Ограничители мощности</a></li>
+									<li><a href="#">Детекторы мощности</a></li>
+									<li><a href="#">Эквалайзеры</a></li>
+									<li><a class="link-collapse" data-toggle="collapse" href="#collapseSVCH-8" role="button" aria-expanded="false"
+										aria-controls="collapseSVCH-8">Резисторы бескорпусные</a></li>
+										<div class="collapse" id="collapseSVCH-8">
+											<ul>
+												<li><a href="#">Резисторы</a></li>
+												<li><a href="#">Резисторы высокой мощности</a></li>
+											</ul>
+										</div>
+									<li><a href="#">Конденсаторы бескорпусные</a></li>
+									<li><a class="link-collapse" data-toggle="collapse" href="#collapseSVCH-9" role="button" aria-expanded="false"
+										aria-controls="collapseSVCH-9">Распределители мощности</a></li>
+										<div class="collapse" id="collapseSVCH-9">
+											<ul>
+												<li><a href="#">Гибридные ответвители со сдвигом фазы 90°</a></li>
+												<li><a href="#">Гибридные ответвители со сдвигом фазы 180°</a></li>
+												<li><a href="#">Делители мощности на 2 выхода</a></li>
+												<li><a href="#">Делители мощности на 3 выхода</a></li>
+												<li><a href="#">Делители мощности на 4 выхода</a></li>
+											</ul>
+										</div>
+									<li><a href="#">Фильтры</a></li>
+									<li><a href="#">Направленные ответвители</a></li>
+									<li><a class="link-collapse" data-toggle="collapse" href="#collapseSVCH-10" role="button" aria-expanded="false"
+										aria-controls="collapseSVCH-10">Компоненты для цепей управления затворами транзисторов и PIN-диодами</a></li>
+										<div class="collapse" id="collapseSVCH-10">
+											<ul>
+												<li><a href="#">Драйверы с последовательным входом</a></li>
+												<li><a href="#">Драйверы с параллельными входами</a></li>
+												<li><a href="#">Драйверы с параллельными входами для управления PIN-диодами</a></li>
+												<li><a href="#">Драйверы с параллельными входами для управления высоковольтными PIN-диодами</a></li>
+												<li><a href="#">Драйверы с высоким выходным током</a></li>
+												<li><a href="#">Драйверы для детекторов мощности серии NC198XX</a></li>
+												<li><a href="#">Фазовращатели на основе GaAs с цифровым управлением</a></li>
+												<li><a href="#">Дополнительные компоненты для цепей управления</a></li>
+											</ul>
+										</div>
+									<li><a href="#">Транзисторы MOSFET низкочастотные</a></li>
+								</div>
+
 							</ul>
 						</div>
 					</div>
 					<div class="col-md-6 col-xl-4 d-flex mb-5">
 						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
 						<div class="col">
-							<h3 class="h-common text-left">Малошумящие усилители</h3>
+							<h3 class="h-common text-left">Заголовок раздела</h3>
 							<ul class="red-round">
-								<li><a href="#">Транзисторы корпусированные</a></li>
-								<li><a href="#">Транзисторы корпусированные</a></li>
-								<li><a href="#">Интегральные схемы корпусированные</a></li>
-								<li><a href="#">Интегральные схемы корпусированные</a></li>
+								<li><a href="#">Ограничители мощности</a></li>
+								<li><a href="#">Детекторы мощности</a></li>
+								<li><a href="#">Эквалайзеры</a></li>
+								<li><a href="#">Резисторы бескорпусные</a></li>
+								<li><a href="#">Конденсаторы бескорпусные</a></li>
+								<li><a href="#">Распределители мощности</a></li>
+								<li><a href="#">Фильтры</a></li>
+								<li><a href="#">Направленные ответвители</a></li>
+								<li><a href="#">Компоненты для цепей управления затворами транзисторов и PIN-диодами</a></li>
+								<li><a href="#">Транзисторы MOSFET низкочастотные</a></li>
 							</ul>
 						</div>
 					</div>
 					<div class="col-md-6 col-xl-4 d-flex mb-5">
 						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
 						<div class="col">
-							<h3 class="h-common text-left">Малошумящие усилители</h3>
+							<h3 class="h-common text-left">Транзисторы корпусированные</h3>
 							<ul class="red-round">
 								<li><a href="#">Транзисторы корпусированные</a></li>
-								<li><a href="#">Транзисторы корпусированные</a></li>
+								<li><a href="#">Усилители мощности модульные</a></li>
 								<li><a href="#">Интегральные схемы корпусированные</a></li>
-								<li><a href="#">Интегральные схемы корпусированные</a></li>
+								<li><a href="#">Трехмерные сборки</a></li>
 							</ul>
 						</div>
 					</div>
@@ -152,41 +276,41 @@
 					<div class="col-md-6 col-xl-4 d-flex mb-5">
 						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
 						<div class="col">
-							<h3 class="h-common text-left">Малошумящие усилители</h3>
+							<h3 class="h-common text-left">Усилители мощности модульные</h3>
 							<ul class="red-round">
 								<li><a href="#">Транзисторы корпусированные</a></li>
-								<li><a href="#">Транзисторы корпусированные</a></li>
+								<li><a href="#">Усилители мощности модульные</a></li>
 								<li><a href="#">Интегральные схемы корпусированные</a></li>
-								<li><a href="#">Интегральные схемы корпусированные</a></li>
+								<li><a href="#">Трехмерные сборки</a></li>
 							</ul>
 						</div>
 					</div>
 					<div class="col-md-6 col-xl-4 d-flex mb-5">
 						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
 						<div class="col">
-							<h3 class="h-common text-left">Малошумящие усилители</h3>
+							<h3 class="h-common text-left">Интегральные схемы корпусированные</h3>
 							<ul class="red-round">
 								<li><a href="#">Транзисторы корпусированные</a></li>
-								<li><a href="#">Транзисторы корпусированные</a></li>
+								<li><a href="#">Усилители мощности модульные</a></li>
 								<li><a href="#">Интегральные схемы корпусированные</a></li>
-								<li><a href="#">Интегральные схемы корпусированные</a></li>
+								<li><a href="#">Трехмерные сборки</a></li>
 							</ul>
 						</div>
 					</div>
 					<div class="col-md-6 col-xl-4 d-flex mb-5">
 						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
 						<div class="col">
-							<h3 class="h-common text-left">Малошумящие усилители</h3>
+							<h3 class="h-common text-left">Трехмерные сборки</h3>
 							<ul class="red-round">
 								<li><a href="#">Транзисторы корпусированные</a></li>
-								<li><a href="#">Транзисторы корпусированные</a></li>
+								<li><a href="#">Усилители мощности модульные</a></li>
 								<li><a href="#">Интегральные схемы корпусированные</a></li>
-								<li><a href="#">Интегральные схемы корпусированные</a></li>
+								<li><a href="#">Трехмерные сборки</a></li>
 							</ul>
 						</div>
 					</div>
-
 				</div>
+
 			</div>
 		</main>
 
