--- a/svch-komponenty.html
+++ b/svch-komponenty.html
@@ -171,10 +171,7 @@
 											<li><a href="#">Переключатели на основе GaN FET</a></li>
 										</ul>
 									</div>
-								<a class="link-collapse" data-toggle="collapse" href="#collapseSVCH" role="button" aria-expanded="false" aria-controls="collapseSVCH">
-									Показать больше изделий
-								</a>
-								<div class="collapse" id="collapseSVCH">
+								<div class="collapse" id="collapseSVCH-col-1">
 									<li><a class="link-collapse" data-toggle="collapse" href="#collapseSVCH-6" role="button" aria-expanded="false"
 										aria-controls="collapseSVCH-6">Смесители, преобразователи частоты и модуляторы</a></li>
 										<div class="collapse" id="collapseSVCH-6">
@@ -238,7 +235,75 @@
 										</div>
 									<li><a href="#">Транзисторы MOSFET низкочастотные</a></li>
 								</div>
+								<a class="collapse-readmore" data-toggle="collapse" href="#collapseSVCH-col-1" role="button" aria-expanded="false" aria-controls="collapseSVCH-col-1">
+									Показать больше
+								</a>
+							</ul>
+						</div>
+					</div>
+					<div class="col-md-6 col-xl-4 d-flex mb-5">
+						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
+						<div class="col">
+							<h3 class="h-common text-left">Заголовок раздела для примера в две строки</h3>
+							<ul class="red-round">
+								<li><a href="#">Транзисторы корпусированные</a></li>
+								<li><a href="#">Усилители мощности модульные</a></li>
+								<li><a href="#">Интегральные схемы корпусированные</a></li>
+								<li><a href="#">Трехмерные сборки</a></li>
+								<li><a href="#">Транзисторы корпусированные</a></li>
+								<li><a href="#">Усилители мощности модульные</a></li>
+								<li><a href="#">Интегральные схемы корпусированные</a></li>
+								<li><a href="#">Трехмерные сборки</a></li>
+							<div class="collapse" id="collapseSVCH-col-2">
+								<li><a href="#">Транзисторы корпусированные</a></li>
+								<li><a href="#">Усилители мощности модульные</a></li>
+								<li><a href="#">Интегральные схемы корпусированные</a></li>
+								<li><a href="#">Трехмерные сборки</a></li>
+								<li><a href="#">Транзисторы корпусированные</a></li>
+								<li><a href="#">Усилители мощности модульные</a></li>
+								<li><a href="#">Интегральные схемы корпусированные</a></li>
+								<li><a href="#">Трехмерные сборки</a></li>
+							</div>
+							</ul>
+							<a class="collapse-readmore" data-toggle="collapse" href="#collapseSVCH-col-2" role="button" aria-expanded="false" aria-controls="collapseSVCH-col-2">
+								Показать больше
+							</a>
+						</div>
+					</div>
+					<div class="col-md-6 col-xl-4 d-flex mb-5">
+						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
+						<div class="col">
+							<h3 class="h-common text-left">Ещё один заголовок раздела</h3>
+							<ul class="red-round">
+								<li><a href="#">Транзисторы корпусированные</a></li>
+								<li><a href="#">Усилители мощности модульные</a></li>
+								<li><a href="#">Интегральные схемы корпусированные</a></li>
+								<li><a href="#">Трехмерные сборки</a></li>
+							</ul>
+						</div>
+					</div>
 
+					<div class="col-md-6 col-xl-4 d-flex mb-5">
+						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
+						<div class="col">
+							<h3 class="h-common text-left">Ещё один заголовок раздела в две строки</h3>
+							<ul class="red-round">
+								<li><a href="#">Транзисторы корпусированные</a></li>
+								<li><a href="#">Усилители мощности модульные</a></li>
+								<li><a href="#">Интегральные схемы корпусированные</a></li>
+								<li><a href="#">Трехмерные сборки</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-md-6 col-xl-4 d-flex mb-5">
+						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
+						<div class="col">
+							<h3 class="h-common text-left">Ещё один заголовок раздела в две строки для примера</h3>
+							<ul class="red-round">
+								<li><a href="#">Транзисторы корпусированные</a></li>
+								<li><a href="#">Усилители мощности модульные</a></li>
+								<li><a href="#">Интегральные схемы корпусированные</a></li>
+								<li><a href="#">Трехмерные сборки</a></li>
 							</ul>
 						</div>
 					</div>
@@ -246,61 +311,6 @@
 						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
 						<div class="col">
 							<h3 class="h-common text-left">Заголовок раздела</h3>
-							<ul class="red-round">
-								<li><a href="#">Ограничители мощности</a></li>
-								<li><a href="#">Детекторы мощности</a></li>
-								<li><a href="#">Эквалайзеры</a></li>
-								<li><a href="#">Резисторы бескорпусные</a></li>
-								<li><a href="#">Конденсаторы бескорпусные</a></li>
-								<li><a href="#">Распределители мощности</a></li>
-								<li><a href="#">Фильтры</a></li>
-								<li><a href="#">Направленные ответвители</a></li>
-								<li><a href="#">Компоненты для цепей управления затворами транзисторов и PIN-диодами</a></li>
-								<li><a href="#">Транзисторы MOSFET низкочастотные</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-md-6 col-xl-4 d-flex mb-5">
-						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
-						<div class="col">
-							<h3 class="h-common text-left">Транзисторы корпусированные</h3>
-							<ul class="red-round">
-								<li><a href="#">Транзисторы корпусированные</a></li>
-								<li><a href="#">Усилители мощности модульные</a></li>
-								<li><a href="#">Интегральные схемы корпусированные</a></li>
-								<li><a href="#">Трехмерные сборки</a></li>
-							</ul>
-						</div>
-					</div>
-
-					<div class="col-md-6 col-xl-4 d-flex mb-5">
-						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
-						<div class="col">
-							<h3 class="h-common text-left">Усилители мощности модульные</h3>
-							<ul class="red-round">
-								<li><a href="#">Транзисторы корпусированные</a></li>
-								<li><a href="#">Усилители мощности модульные</a></li>
-								<li><a href="#">Интегральные схемы корпусированные</a></li>
-								<li><a href="#">Трехмерные сборки</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-md-6 col-xl-4 d-flex mb-5">
-						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
-						<div class="col">
-							<h3 class="h-common text-left">Интегральные схемы корпусированные</h3>
-							<ul class="red-round">
-								<li><a href="#">Транзисторы корпусированные</a></li>
-								<li><a href="#">Усилители мощности модульные</a></li>
-								<li><a href="#">Интегральные схемы корпусированные</a></li>
-								<li><a href="#">Трехмерные сборки</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-md-6 col-xl-4 d-flex mb-5">
-						<div class="col-2"><img src="img/svg/pryamougolnik_10_2515.svg" alt=""></div>
-						<div class="col">
-							<h3 class="h-common text-left">Трехмерные сборки</h3>
 							<ul class="red-round">
 								<li><a href="#">Транзисторы корпусированные</a></li>
 								<li><a href="#">Усилители мощности модульные</a></li>
