--- a/svch-komponenty.html
+++ b/svch-komponenty.html
@@ -97,7 +97,7 @@
 		</nav>
 
 		<!-- Main Block Inner -->
-		<main class="main-showcase py-5">
+		<main class="main-showcase category py-5">
 			<div class="container">
 				<nav aria-label="breadcrumb">
 					<ol class="breadcrumb">
