--- a/svch-komponenty.html
+++ b/svch-komponenty.html
@@ -101,7 +101,7 @@
 			<div class="container">
 				<nav aria-label="breadcrumb">
 					<ol class="breadcrumb">
-						<li class="breadcrumb-item"><a href="/">Главная</a></li>
+						<li class="breadcrumb-item"><a href="/epsilon">Главная</a></li>
 						<li class="breadcrumb-item"><a href="products.html">Изделия</a></li>
 						<li class="breadcrumb-item active" aria-current="page">СВЧ компоненты</li>
 					</ol>
