--- a/licenses.html
+++ b/licenses.html
@@ -21,7 +21,7 @@
 				<div class="row no-gutters align-items-center">
 					<div class="col-xl-5 mb-3 mb-xl-0">
 						<div class="d-sm-flex no-gutters align-items-center text-center text-sm-left">
-							<div class="mb-3 mb-sm-0"><a href="/"><img class="logo" src="img/svg/logo.svg"
+							<div class="mb-3 mb-sm-0"><a href="/Epsilon"><img class="logo" src="img/svg/logo.svg"
 										alt="Эпсилон логотип"></a></div>
 							<p class="pl-sm-3 slogan">Официальный поставщик в РФ<br>высоконадежной ЭКБ производства КНР</p>
 						</div>
@@ -62,7 +62,7 @@
 				<div class="collapse navbar-collapse" id="navbarsExample07">
 					<ul class="navbar-nav mr-auto">
 						<li class="nav-item">
-							<a class="nav-link" href="/">Главная</a>
+							<a class="nav-link" href="/Epsilon">Главная</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="about.html">О компании</a>
@@ -316,7 +316,7 @@
 					<div class="inner-content-right col-lg-9 px-5 pt-4">
 						<nav aria-label="breadcrumb">
 							<ol class="breadcrumb">
-								<li class="breadcrumb-item"><a href="/">Главная</a></li>
+								<li class="breadcrumb-item"><a href="/Epsilon">Главная</a></li>
 								<li class="breadcrumb-item active" aria-current="page">Лицензии и сертификаты</li>
 							</ol>
 						</nav>
